booksapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: booksapp
  annotations:
    ingress.kubernetes.io/custom-request-headers: l5d-dst-override:webapp.booksapp.svc.cluster.local:7000
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
  - host: booksapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 7000
